--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-blinker==1.9.0
-click==8.1.8
-Flask==3.1.0
-Flask-SQLAlchemy==3.1.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-mysql-connector-python==9.2.0
-SQLAlchemy==2.0.38
-typing_extensions==4.12.2
-Werkzeug==3.1.3
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.23
+mysqlclient==2.0.3
+python-dotenv==0.19.0
+Werkzeug==2.0.1
+MarkupSafe==2.0.1
